public/styles/style.css
:root {
    --clr-regular-blue: #435188;
    --clr-light-blue: #7A8AA4;
    --clr-white: #FAFAFA;
    --clr-black: #050505;
    --clr-beige: #D7D0C3;

    --p-button: 32px 64px;
    --p-section: 32px 90px;

    --flex-gap: 32px;

    --fs-title: 3.125rem;
    --fs-subtitle: 2.125rem;
    --fs-body-small: 1.125rem;
    --fs-body-big: 2.125rem;
}

@media only screen and (max-width: 780px) {
    :root {
        --p-button: 16px 32px;
        --p-section: 32px 16px;

        --flex-gap: 16px;

        --fs-title: 2.125rem;
        --fs-subtitle: 1.125rem;
        --fs-body-small: 1.125rem;
        --fs-body-big: 1.125rem;    
    }
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body, html{
    /* whoever did this ce code ne fait rien */
    margin: 0;
    padding: 0;
}

section {
    padding: var(--p-section);
}

/* on utilise pas la moitié de tout ça, 25mo ça part vite */
@font-face {
    font-family: 'Satoshi-Variable';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Variable.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Variable.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Variable.ttf') format('truetype');
    font-weight: 300 900;
    font-display: swap;
    font-style: normal;
}

@font-face {
    font-family: 'Satoshi-VariableItalic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-VariableItalic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-VariableItalic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-VariableItalic.ttf') format('truetype');
    font-weight: 300 900;
    font-display: swap;
    font-style: italic;
}


@font-face {
    font-family: 'Satoshi-Light';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Light.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Light.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Light.ttf') format('truetype');
    font-weight: 300;
    font-display: swap;
    font-style: normal;
}


@font-face {
    font-family: 'Satoshi-LightItalic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-LightItalic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-LightItalic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-LightItalic.ttf') format('truetype');
    font-weight: 300;
    font-display: swap;
    font-style: italic;
}


@font-face {
    font-family: 'Satoshi-Regular';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Regular.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Regular.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Regular.ttf') format('truetype');
    font-weight: 400;
    font-display: swap;
    font-style: normal;
}


@font-face {
    font-family: 'Satoshi-Italic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Italic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Italic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Italic.ttf') format('truetype');
    font-weight: 400;
    font-display: swap;
    font-style: italic;
}


@font-face {
    font-family: 'Satoshi-Medium';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Medium.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Medium.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Medium.ttf') format('truetype');
    font-weight: 500;
    font-display: swap;
    font-style: normal;
}


@font-face {
    font-family: 'Satoshi-MediumItalic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-MediumItalic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-MediumItalic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-MediumItalic.ttf') format('truetype');
    font-weight: 500;
    font-display: swap;
    font-style: italic;
}


@font-face {
    font-family: 'Satoshi-Bold';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Bold.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Bold.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Bold.ttf') format('truetype');
    font-weight: 700;
    font-display: swap;
    font-style: normal;
}


@font-face {
    font-family: 'Satoshi-BoldItalic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BoldItalic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BoldItalic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BoldItalic.ttf') format('truetype');
    font-weight: 700;
    font-display: swap;
    font-style: italic;
}


@font-face {
    font-family: 'Satoshi-Black';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Black.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Black.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-Black.ttf') format('truetype');
    font-weight: 900;
    font-display: swap;
    font-style: normal;
}


@font-face {
    font-family: 'Satoshi-BlackItalic';
    src: url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BlackItalic.woff2') format('woff2'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BlackItalic.woff') format('woff'),
            url('/projet-housing-platform-hetic/public/assets/fonts/Satoshi-BlackItalic.ttf') format('truetype');
    font-weight: 900;
    font-display: swap;
    font-style: italic;
}

body {
    margin: 0;
    box-sizing: border-box;
    background-color: var(--clr-white);
    font-family: 'Satoshi-Regular';
}

footer {
    /* position absolute crée un bug quand la page à du contenu qui prend toute la hauteur,
    vu qu'on construit de haut en bas on a pas besoin de ça pour un footer whatsoever*/
    /*position: absolute;*/
    /*bottom: 0;*/
    /* un footer est un élément de type block, il prend forcément 100% de width, à l'instar des div ou des sections */
    /*width: 100%;*/
    display: flex;
    flex-direction: column;
    align-items: center;
    /*padding: 32px 0;*/
    padding: var(--p-section);
    gap: var(--flex-gap);
    /*font-family: 'Satoshi-Regular';*/
    font-size: var(--fs-body-small);
}

.footer-top {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    padding: 32px 0;
    gap: 10px;
    font-size: 18px;
}

.footer-bottom {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    padding: 32px 0;
    gap: 10px;
}

header {
    display: flex;
    padding: var(--p-section);
    padding-top: 16px;
    padding-bottom: 16px;
    justify-content: space-between;
    align-items: center;
}

header a {
    text-decoration: none;
    font-size: var(--fs-subtitle);
    color: var(--clr-black);
    margin: 16px 0;
}

header a:first-of-type {
    margin: 0;
}

header span {
    color: var(--clr-regular-blue);
    font-size: var(--fs-body-small);
}

header a:hover {
    text-decoration: underline;
}

header button {
    padding: 8px 16px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    background-color: var(--clr-white);
    border: 1px var(--clr-regular-blue) solid ;
    cursor: pointer;
}

header #headerModal {
    padding: 8px;
    position: absolute;
    right: 0;
    margin: var(--p-section);
    margin-top: 0;
    margin-bottom: 0;
    background-color: var(--clr-regular-blue);
    font-size: var(--fs-body-big);
    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);
}

header #headerModal a {
    text-decoration: none;
    color: var(--clr-white);
    display: block;
}

header #headerModal a:hover {
    text-decoration: underline;
}

header .hideModal {
    display: none;
}

